# bom

./: .gitignore  Cargo.toml  Readme.md  build.sh  move_exec_to_bom_folder.sh
src/: add.rs  cli.rs  commands.rs  main.rs
