[package]
name = "bom"
version = "0.1.2"
authors = ["uma <blog3170@gmail.com>"]
repository = "https://github.com/uma0317/bom"
description = "boilerplate manager CLI"
readme = "Readme.md"
license = "MIT"

[dependencies]
clap = "2.31.2"
indicatif = "0.9.0"
reqwest = "0.8.5"
hyper = "0.11.25"
regex = "0.2"
termion = "1.5.1"